# e

./: CODING.md  Cargo.toml  LICENSE  README.md  RUST.md  TODO.md  build.rs  empty_window.txt
.cargo/: config.toml
.claude/rules/: rust-style.md
assets/: triangle-fs.glsl  triangle-fs.spv  triangle-vs.glsl
ast/src/: README.md  ast.rs  astdisplay.rs  lib.rs  resolve_block.rs  resolve_expr.rs  resolve_module.rs  resolve_type.rs  stdlib.rs
async/src/: joinhandle.rs  lib.rs  runtime.rs
audio/: Cargo.toml
audio/src/: audioin.rs  audioout.rs  lib.rs  pulse.rs
base/: Cargo.toml
base/src/: aabb2.rs  aabb3.rs  channel.rs  clamp.rs  complex.rs  dual.rs  epoch.rs  euler.rs  executor.rs  f16.rs  fov.rs  image.rs  lib.rs  log.rs  mat2x2.rs  mat3x3.rs  mat4x4.rs  multivec201.rs  multivec301.rs  one.rs  (+8 more)
codec/: Cargo.toml
codec-derive/: Cargo.toml
docs/: frontend-architecture.md  single-threaded-async-architecture.md
examples/: empty_window.rs  log.txt  quad.rs  test_executor.rs  test_triangle.rs  test_triangle.vert  test_triangle_vert.spv  test_ui.rs  test_window.rs  texture.rs  triangle.rs
feetech/: Cargo.toml
gpu_macros/: Cargo.toml  GRAMMAR.md  README.md  RUST.md  RUST2SL.md  TODO.md
http/: Cargo.toml
image/: Cargo.toml
macros/: Cargo.toml  README.md  TODO.md
math/: Cargo.toml
old/: color.rs  test_triangle.frag  test_triangle.vert  test_ui.rs
other/: pixel.rs
sr/: Cargo.toml  README.md
src/: lib.rs
sys-sys/: Cargo.toml  build.rs  build.sh  wrapper.h
tests/: empty_window.rs
ui/: README.md
web/: Cargo.toml
webui/: Cargo.toml  webui.js
(+391 files in other folders)
